src/generated/LemurParser.cpp

#include <string>
#include <vector>

// Generated from Lemur.g4 by ANTLR 4.7.2

#include "LemurListener.h"
#include "LemurParser.h"
#include "LemurVisitor.h"

using namespace antlrcpp;
using namespace antlr4;

LemurParser::LemurParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA,
                                             _sharedContextCache);
}

LemurParser::~LemurParser() { delete _interpreter; }

std::string LemurParser::getGrammarFileName() const { return "Lemur.g4"; }

const std::vector<std::string> &LemurParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary &LemurParser::getVocabulary() const { return _vocabulary; }

//----------------- FileContext
//------------------------------------------------------------------

LemurParser::FileContext::FileContext(ParserRuleContext *parent,
                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *LemurParser::FileContext::EOF() {
  return getToken(LemurParser::EOF, 0);
}

std::vector<LemurParser::GlobalstmtContext *>
LemurParser::FileContext::globalstmt() {
  return getRuleContexts<LemurParser::GlobalstmtContext>();
}

LemurParser::GlobalstmtContext *LemurParser::FileContext::globalstmt(size_t i) {
  return getRuleContext<LemurParser::GlobalstmtContext>(i);
}

std::vector<tree::TerminalNode *> LemurParser::FileContext::NEWLINE() {
  return getTokens(LemurParser::NEWLINE);
}

tree::TerminalNode *LemurParser::FileContext::NEWLINE(size_t i) {
  return getToken(LemurParser::NEWLINE, i);
}

size_t LemurParser::FileContext::getRuleIndex() const {
  return LemurParser::RuleFile;
}

void LemurParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFile(this);
}

void LemurParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFile(this);
}

antlrcpp::Any LemurParser::FileContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::FileContext *LemurParser::file() {
  FileContext *_localctx =
      _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, LemurParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~0x3fULL) == 0) &&
            ((1ULL << _la) &
             ((1ULL << LemurParser::CLASS) | (1ULL << LemurParser::DEF) |
              (1ULL << LemurParser::NEWLINE))) != 0)) {
      setState(62);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case LemurParser::CLASS:
        case LemurParser::DEF: {
          setState(60);
          globalstmt();
          break;
        }

        case LemurParser::NEWLINE: {
          setState(61);
          match(LemurParser::NEWLINE);
          break;
        }

        default:
          throw NoViableAltException(this);
      }
      setState(66);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(67);
    match(LemurParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalstmtContext
//------------------------------------------------------------------

LemurParser::GlobalstmtContext::GlobalstmtContext(ParserRuleContext *parent,
                                                  size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

LemurParser::ClassdefContext *LemurParser::GlobalstmtContext::classdef() {
  return getRuleContext<LemurParser::ClassdefContext>(0);
}

LemurParser::FunctiondefContext *LemurParser::GlobalstmtContext::functiondef() {
  return getRuleContext<LemurParser::FunctiondefContext>(0);
}

size_t LemurParser::GlobalstmtContext::getRuleIndex() const {
  return LemurParser::RuleGlobalstmt;
}

void LemurParser::GlobalstmtContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterGlobalstmt(this);
}

void LemurParser::GlobalstmtContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitGlobalstmt(this);
}

antlrcpp::Any LemurParser::GlobalstmtContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitGlobalstmt(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::GlobalstmtContext *LemurParser::globalstmt() {
  GlobalstmtContext *_localctx =
      _tracker.createInstance<GlobalstmtContext>(_ctx, getState());
  enterRule(_localctx, 2, LemurParser::RuleGlobalstmt);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LemurParser::CLASS: {
        enterOuterAlt(_localctx, 1);
        setState(69);
        classdef();
        break;
      }

      case LemurParser::DEF: {
        enterOuterAlt(_localctx, 2);
        setState(70);
        functiondef();
        break;
      }

      default:
        throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassdefContext
//------------------------------------------------------------------

LemurParser::ClassdefContext::ClassdefContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *LemurParser::ClassdefContext::CLASS() {
  return getToken(LemurParser::CLASS, 0);
}

tree::TerminalNode *LemurParser::ClassdefContext::LEFTBRACE() {
  return getToken(LemurParser::LEFTBRACE, 0);
}

tree::TerminalNode *LemurParser::ClassdefContext::RIGHTBRACE() {
  return getToken(LemurParser::RIGHTBRACE, 0);
}

std::vector<tree::TerminalNode *> LemurParser::ClassdefContext::NAME() {
  return getTokens(LemurParser::NAME);
}

tree::TerminalNode *LemurParser::ClassdefContext::NAME(size_t i) {
  return getToken(LemurParser::NAME, i);
}

LemurParser::ClassbodyContext *LemurParser::ClassdefContext::classbody() {
  return getRuleContext<LemurParser::ClassbodyContext>(0);
}

tree::TerminalNode *LemurParser::ClassdefContext::ARROW() {
  return getToken(LemurParser::ARROW, 0);
}

size_t LemurParser::ClassdefContext::getRuleIndex() const {
  return LemurParser::RuleClassdef;
}

void LemurParser::ClassdefContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterClassdef(this);
}

void LemurParser::ClassdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitClassdef(this);
}

antlrcpp::Any LemurParser::ClassdefContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitClassdef(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::ClassdefContext *LemurParser::classdef() {
  ClassdefContext *_localctx =
      _tracker.createInstance<ClassdefContext>(_ctx, getState());
  enterRule(_localctx, 4, LemurParser::RuleClassdef);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(LemurParser::CLASS);
    setState(74);
    dynamic_cast<ClassdefContext *>(_localctx)->cName =
        match(LemurParser::NAME);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LemurParser::ARROW) {
      setState(75);
      match(LemurParser::ARROW);
      setState(76);
      dynamic_cast<ClassdefContext *>(_localctx)->baseName =
          match(LemurParser::NAME);
    }
    setState(79);
    match(LemurParser::LEFTBRACE);
    setState(80);
    dynamic_cast<ClassdefContext *>(_localctx)->body = classbody();
    setState(81);
    match(LemurParser::RIGHTBRACE);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassbodyContext
//------------------------------------------------------------------

LemurParser::ClassbodyContext::ClassbodyContext(ParserRuleContext *parent,
                                                size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<LemurParser::ClassvardeclContext *>
LemurParser::ClassbodyContext::classvardecl() {
  return getRuleContexts<LemurParser::ClassvardeclContext>();
}

LemurParser::ClassvardeclContext *LemurParser::ClassbodyContext::classvardecl(
    size_t i) {
  return getRuleContext<LemurParser::ClassvardeclContext>(i);
}

std::vector<LemurParser::ClassfunctiondefContext *>
LemurParser::ClassbodyContext::classfunctiondef() {
  return getRuleContexts<LemurParser::ClassfunctiondefContext>();
}

LemurParser::ClassfunctiondefContext *
LemurParser::ClassbodyContext::classfunctiondef(size_t i) {
  return getRuleContext<LemurParser::ClassfunctiondefContext>(i);
}

std::vector<tree::TerminalNode *> LemurParser::ClassbodyContext::NEWLINE() {
  return getTokens(LemurParser::NEWLINE);
}

tree::TerminalNode *LemurParser::ClassbodyContext::NEWLINE(size_t i) {
  return getToken(LemurParser::NEWLINE, i);
}

size_t LemurParser::ClassbodyContext::getRuleIndex() const {
  return LemurParser::RuleClassbody;
}

void LemurParser::ClassbodyContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterClassbody(this);
}

void LemurParser::ClassbodyContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitClassbody(this);
}

antlrcpp::Any LemurParser::ClassbodyContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitClassbody(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::ClassbodyContext *LemurParser::classbody() {
  ClassbodyContext *_localctx =
      _tracker.createInstance<ClassbodyContext>(_ctx, getState());
  enterRule(_localctx, 6, LemurParser::RuleClassbody);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~0x3fULL) == 0) &&
            ((1ULL << _la) &
             ((1ULL << LemurParser::DEF) | (1ULL << LemurParser::NEWLINE) |
              (1ULL << LemurParser::NAME))) != 0)) {
      setState(86);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case LemurParser::NAME: {
          setState(83);
          classvardecl();
          break;
        }

        case LemurParser::DEF: {
          setState(84);
          classfunctiondef();
          break;
        }

        case LemurParser::NEWLINE: {
          setState(85);
          match(LemurParser::NEWLINE);
          break;
        }

        default:
          throw NoViableAltException(this);
      }
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassvardeclContext
//------------------------------------------------------------------

LemurParser::ClassvardeclContext::ClassvardeclContext(ParserRuleContext *parent,
                                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *> LemurParser::ClassvardeclContext::NAME() {
  return getTokens(LemurParser::NAME);
}

tree::TerminalNode *LemurParser::ClassvardeclContext::NAME(size_t i) {
  return getToken(LemurParser::NAME, i);
}

size_t LemurParser::ClassvardeclContext::getRuleIndex() const {
  return LemurParser::RuleClassvardecl;
}

void LemurParser::ClassvardeclContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterClassvardecl(this);
}

void LemurParser::ClassvardeclContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitClassvardecl(this);
}

antlrcpp::Any LemurParser::ClassvardeclContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitClassvardecl(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::ClassvardeclContext *LemurParser::classvardecl() {
  ClassvardeclContext *_localctx =
      _tracker.createInstance<ClassvardeclContext>(_ctx, getState());
  enterRule(_localctx, 8, LemurParser::RuleClassvardecl);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    dynamic_cast<ClassvardeclContext *>(_localctx)->typeName =
        match(LemurParser::NAME);
    setState(92);
    dynamic_cast<ClassvardeclContext *>(_localctx)->varName =
        match(LemurParser::NAME);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassfunctiondefContext
//------------------------------------------------------------------

LemurParser::ClassfunctiondefContext::ClassfunctiondefContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *LemurParser::ClassfunctiondefContext::DEF() {
  return getToken(LemurParser::DEF, 0);
}

tree::TerminalNode *LemurParser::ClassfunctiondefContext::OPEN() {
  return getToken(LemurParser::OPEN, 0);
}

tree::TerminalNode *LemurParser::ClassfunctiondefContext::CLOSED() {
  return getToken(LemurParser::CLOSED, 0);
}

std::vector<tree::TerminalNode *> LemurParser::ClassfunctiondefContext::NAME() {
  return getTokens(LemurParser::NAME);
}

tree::TerminalNode *LemurParser::ClassfunctiondefContext::NAME(size_t i) {
  return getToken(LemurParser::NAME, i);
}

LemurParser::ParamlistContext *
LemurParser::ClassfunctiondefContext::paramlist() {
  return getRuleContext<LemurParser::ParamlistContext>(0);
}

LemurParser::BlockContext *LemurParser::ClassfunctiondefContext::block() {
  return getRuleContext<LemurParser::BlockContext>(0);
}

size_t LemurParser::ClassfunctiondefContext::getRuleIndex() const {
  return LemurParser::RuleClassfunctiondef;
}

void LemurParser::ClassfunctiondefContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterClassfunctiondef(this);
}

void LemurParser::ClassfunctiondefContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitClassfunctiondef(this);
}

antlrcpp::Any LemurParser::ClassfunctiondefContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitClassfunctiondef(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::ClassfunctiondefContext *LemurParser::classfunctiondef() {
  ClassfunctiondefContext *_localctx =
      _tracker.createInstance<ClassfunctiondefContext>(_ctx, getState());
  enterRule(_localctx, 10, LemurParser::RuleClassfunctiondef);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(LemurParser::DEF);
    setState(95);
    dynamic_cast<ClassfunctiondefContext *>(_localctx)->fName =
        match(LemurParser::NAME);
    setState(96);
    match(LemurParser::OPEN);
    setState(97);
    dynamic_cast<ClassfunctiondefContext *>(_localctx)->params = paramlist();
    setState(98);
    match(LemurParser::CLOSED);
    setState(101);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LemurParser::T__0) {
      setState(99);
      match(LemurParser::T__0);
      setState(100);
      dynamic_cast<ClassfunctiondefContext *>(_localctx)->retType =
          match(LemurParser::NAME);
    }
    setState(103);
    dynamic_cast<ClassfunctiondefContext *>(_localctx)->body = block();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctiondefContext
//------------------------------------------------------------------

LemurParser::FunctiondefContext::FunctiondefContext(ParserRuleContext *parent,
                                                    size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *LemurParser::FunctiondefContext::DEF() {
  return getToken(LemurParser::DEF, 0);
}

tree::TerminalNode *LemurParser::FunctiondefContext::OPEN() {
  return getToken(LemurParser::OPEN, 0);
}

tree::TerminalNode *LemurParser::FunctiondefContext::CLOSED() {
  return getToken(LemurParser::CLOSED, 0);
}

std::vector<tree::TerminalNode *> LemurParser::FunctiondefContext::NAME() {
  return getTokens(LemurParser::NAME);
}

tree::TerminalNode *LemurParser::FunctiondefContext::NAME(size_t i) {
  return getToken(LemurParser::NAME, i);
}

LemurParser::ParamlistContext *LemurParser::FunctiondefContext::paramlist() {
  return getRuleContext<LemurParser::ParamlistContext>(0);
}

LemurParser::BlockContext *LemurParser::FunctiondefContext::block() {
  return getRuleContext<LemurParser::BlockContext>(0);
}

size_t LemurParser::FunctiondefContext::getRuleIndex() const {
  return LemurParser::RuleFunctiondef;
}

void LemurParser::FunctiondefContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterFunctiondef(this);
}

void LemurParser::FunctiondefContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitFunctiondef(this);
}

antlrcpp::Any LemurParser::FunctiondefContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitFunctiondef(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::FunctiondefContext *LemurParser::functiondef() {
  FunctiondefContext *_localctx =
      _tracker.createInstance<FunctiondefContext>(_ctx, getState());
  enterRule(_localctx, 12, LemurParser::RuleFunctiondef);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(LemurParser::DEF);
    setState(106);
    dynamic_cast<FunctiondefContext *>(_localctx)->fName =
        match(LemurParser::NAME);
    setState(107);
    match(LemurParser::OPEN);
    setState(108);
    dynamic_cast<FunctiondefContext *>(_localctx)->params = paramlist();
    setState(109);
    match(LemurParser::CLOSED);
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LemurParser::T__0) {
      setState(110);
      match(LemurParser::T__0);
      setState(111);
      dynamic_cast<FunctiondefContext *>(_localctx)->retType =
          match(LemurParser::NAME);
    }
    setState(114);
    dynamic_cast<FunctiondefContext *>(_localctx)->body = block();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamlistContext
//------------------------------------------------------------------

LemurParser::ParamlistContext::ParamlistContext(ParserRuleContext *parent,
                                                size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *> LemurParser::ParamlistContext::NAME() {
  return getTokens(LemurParser::NAME);
}

tree::TerminalNode *LemurParser::ParamlistContext::NAME(size_t i) {
  return getToken(LemurParser::NAME, i);
}

size_t LemurParser::ParamlistContext::getRuleIndex() const {
  return LemurParser::RuleParamlist;
}

void LemurParser::ParamlistContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterParamlist(this);
}

void LemurParser::ParamlistContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitParamlist(this);
}

antlrcpp::Any LemurParser::ParamlistContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitParamlist(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::ParamlistContext *LemurParser::paramlist() {
  ParamlistContext *_localctx =
      _tracker.createInstance<ParamlistContext>(_ctx, getState());
  enterRule(_localctx, 14, LemurParser::RuleParamlist);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LemurParser::NAME) {
      setState(116);
      dynamic_cast<ParamlistContext *>(_localctx)->typeName =
          match(LemurParser::NAME);
      setState(117);
      dynamic_cast<ParamlistContext *>(_localctx)->varName =
          match(LemurParser::NAME);
      _localctx->types.push_back((
          dynamic_cast<ParamlistContext *>(_localctx)->typeName != nullptr
              ? dynamic_cast<ParamlistContext *>(_localctx)->typeName->getText()
              : ""));
      _localctx->vars.push_back(
          (dynamic_cast<ParamlistContext *>(_localctx)->varName != nullptr
               ? dynamic_cast<ParamlistContext *>(_localctx)->varName->getText()
               : ""));
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == LemurParser::T__1) {
        setState(119);
        match(LemurParser::T__1);
        setState(120);
        dynamic_cast<ParamlistContext *>(_localctx)->typeName =
            match(LemurParser::NAME);
        setState(121);
        dynamic_cast<ParamlistContext *>(_localctx)->varName =
            match(LemurParser::NAME);
        {
          _localctx->types.push_back(
              (dynamic_cast<ParamlistContext *>(_localctx)->typeName != nullptr
                   ? dynamic_cast<ParamlistContext *>(_localctx)
                         ->typeName->getText()
                   : ""));
          _localctx->vars.push_back(
              (dynamic_cast<ParamlistContext *>(_localctx)->varName != nullptr
                   ? dynamic_cast<ParamlistContext *>(_localctx)
                         ->varName->getText()
                   : ""));
        }
        setState(127);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext
//------------------------------------------------------------------

LemurParser::BlockContext::BlockContext(ParserRuleContext *parent,
                                        size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *LemurParser::BlockContext::LEFTBRACE() {
  return getToken(LemurParser::LEFTBRACE, 0);
}

tree::TerminalNode *LemurParser::BlockContext::RIGHTBRACE() {
  return getToken(LemurParser::RIGHTBRACE, 0);
}

std::vector<tree::TerminalNode *> LemurParser::BlockContext::NEWLINE() {
  return getTokens(LemurParser::NEWLINE);
}

tree::TerminalNode *LemurParser::BlockContext::NEWLINE(size_t i) {
  return getToken(LemurParser::NEWLINE, i);
}

std::vector<LemurParser::StmtContext *> LemurParser::BlockContext::stmt() {
  return getRuleContexts<LemurParser::StmtContext>();
}

LemurParser::StmtContext *LemurParser::BlockContext::stmt(size_t i) {
  return getRuleContext<LemurParser::StmtContext>(i);
}

size_t LemurParser::BlockContext::getRuleIndex() const {
  return LemurParser::RuleBlock;
}

void LemurParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->enterBlock(this);
}

void LemurParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LemurListener *>(listener);
  if (parserListener != nullptr) parserListener->exitBlock(this);
}

antlrcpp::Any LemurParser::BlockContext::accept(
    tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LemurVisitor *>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

LemurParser::BlockContext *LemurParser::block() {
  BlockContext *_localctx =
      _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, LemurParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(LemurParser::LEFTBRACE);
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(135);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case LemurParser::T__4:
        case LemurParser::UMINUS:
        case LemurParser::FOR:
        case LemurParser::PRINT:
        case LemurParser::OPEN:
        case LemurParser::RET:
        case LemurParser::WHILE:
        case LemurParser::IF:
        case LemurParser::NEG:
        case LemurParser::NAME:
        case LemurParser::INT:
        case LemurParser::FLOAT:
        case LemurParser::STRING: {
          setState(131);
          stmt();
          setState(132);
          match(LemurParser::NEWLINE);
          break;
        }

        case LemurParser::NEWLINE: {
          setState(134);
          match(LemurParser::NEWLINE);
          break;
        }

        default:
          throw NoViableAltException(this);
      }
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((
        ((_la & ~0x3fULL) == 0) &&
        ((1ULL << _la) &
         ((1ULL << LemurParser::T__4) | (1ULL << LemurParser::UMINUS) |
          (1ULL << LemurParser::FOR) | (1ULL << LemurParser::PRINT) |
          (1ULL << LemurParser::OPEN) | (1ULL << LemurParser::RET) |
          (1ULL << LemurParser::WHILE) | (1ULL << LemurParser::IF) |
          (1ULL << LemurParser::NEG) | (1ULL << LemurParser::NEWLINE) |
          (1ULL << LemurParser::NAME) | (1ULL << LemurParser::INT) |
          (1ULL << LemurParser::FLOAT) | (1ULL << LemurParser::STRING))) != 0));
    setState(139);
    match(LemurParser::RIGHTBRACE);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext
//------------------------------------------------------------------

LemurParser::StmtContext::StmtContext(ParserRuleContext *parent,
                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

LemurParser::VardeclContext *LemurParser::StmtContext::vardecl() {
  return getRuleContext<LemurParser::VardeclContext>(0);
}

LemurParser::AssignContext *LemurParser::StmtContext::assign() {
  return getRuleContext<LemurParser::AssignContext>(0);
}

LemurParser::DeclassignContext *LemurParser::StmtContext::declassign() {
  return getRuleContext<LemurParser::DeclassignContext>(0);
}

LemurParser::RetContext *LemurParser::StmtContext::ret() {
  return getRuleContext<LemurParser::RetContext>(0);
}

LemurParser::WhileloopContext *LemurParser::StmtContext::whileloop() {
  return getRuleContext<LemurParser::WhileloopContext>(0);
}

LemurParser::IfExprContext *LemurParser::StmtContext::ifExpr() {
  return getRuleContext<LemurParser::IfExprContext>(0);
}

LemurParser::IfElseExprContext *LemurParser::StmtContext::ifElseExpr() {
  return getRuleContext<LemurParser::IfElseExprContext>(0);
}
